--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 baseURL = "https://raditian-hugo.radity.com/"
 languageCode = "en-us"
-# theme = "raditian-free-hugo-theme"
 
 # Plugins
 [params.plugins]
@@ -62,8 +61,8 @@ languageCode = "en-us"
   googleTagManagerID = "GTM-000000" # Google Analytics works with Google Tag Manager
 
   [params.logo]
-    text1 = "Andreas"
-    text2 = "Ellure"
+    text1 = "Shreyansh"
+    text2 = "Saha"
 
   [params.footer]
       copyright = "© Raditian. All rights reserved."
