--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,9 +1,9 @@
 # showcase
 showcase:
   enable: true
-  title: "Hello, I’m Andreas."
-  subtitle: "Front-End Developer"
-  description: "I work at <a target='_blank' href='https://radity.com/'>Radity</a>, a software development company in Switzerland. And I am a Raditian. You get the idea where theme name comes from. Keep cool, stay in touch. You can download this theme from <a target='_blank' href='https://github.com/radity/raditian-free-hugo-theme'>github</a>."
+  title: "Hello, I’m Shreyansh."
+  subtitle: "Software Engineer"
+  description: "I'm a Computer Science student currently pursuing my Bachelor's Degree. "
   image:
     x: "img/showcase/showcase.png"
     _2x: "img/showcase/showcase@2x.png"
@@ -13,42 +13,42 @@ showcase:
   button:
     icon: "icon-mail-fill"
     btnText: "Contact"
-    URL: "https://radity.com/en/contact/"
+    URL: "mailto:yanshrey@gmail.com"
 
   socialLinks:
     - icon: "linkedin"
-      URL: "https://www.linkedin.com/company/radity/"
+      URL: "https://www.linkedin.com/in/shreyanshsaha"
 
     - icon: "github"
-      URL: "https://github.com/radity"
+      URL: "https://github.com/shreyanshsaha"
 
-    - icon: "twitter"
-      URL: "https://twitter.com/radity"
+    # - icon: "twitter"
+    #   URL: "https://twitter.com/radity"
 
-    - icon: "dribbble"
-      URL: "https://dribbble.com/radity"
+    # - icon: "dribbble"
+    #   URL: "https://dribbble.com/radity"
 
-    - icon: "behance"
-      URL: "https://www.behance.net/radity-digital"
+    # - icon: "behance"
+    #   URL: "https://www.behance.net/radity-digital"
 
-    - icon: "youtube"
-      URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
+    # - icon: "youtube"
+    #   URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
 
-    - icon: "instagram"
-      URL: "https://www.instagram.com/teamradity/"
+    # - icon: "instagram"
+    #   URL: "https://www.instagram.com/teamradity/"
 
-    - icon: "facebook"
-      URL: "https://www.facebook.com/raditycom/"
+    # - icon: "facebook"
+    #   URL: "https://www.facebook.com/raditycom/"
 
-    - icon: "codepen"
-      URL: "#"
+    # - icon: "codepen"
+    #   URL: "#"
 
-    - icon: "yelp"
-      URL: "https://www.yelp.com/"
+    # - icon: "yelp"
+    #   URL: "https://www.yelp.com/"
 
 # about
 about:
-  enable: true
+  enable: false
   title: "Who am I?"
   content: '<p class="lead">
     I am back, after a few days of vacationing with family. Weather was awesome, the beach was
@@ -73,45 +73,49 @@ education:
   enable: true
   title: "Education"
   items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+    - university: "Delhi Public School"
+      year: "2015-2017"
+      degree: "High School Diploma, Science, Math, Computer"
 
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
+    - university: "Vellore Institute of Technology"
+      year: "2017-2021"
+      degree: "Bachelor's of Technology, (B.Tech) Computer Science and Engineering"
 
 # experience
 experience:
   enable: true
   title: "Experience"
-  description: "Over 15+ years of experience working with companies from all over the world. I design & develop digital products to help businesses and improve people's lives."
+  description: "Even with my limited experience, everything I have worked in have turned out better than perfect. I develop products to improve people's life."
   button:
     icon: "icon-linkedin-fill"
     btnText: "Linkedin"
-    URL: "https://www.linkedin.com/company/radity/"
+    URL: "https://www.linkedin.com/in/shreyanshsaha"
   button2:
     icon: "icon-profile-fill"
     btnText: "Download My Resume"
-    URL: "#"
+    URL: "resume.pdf"
 
   items:
-    - title: "Sr. Front-End Developer"
-      company: "Radity"
-      duration: "Feb 2011 - Sep 2019"
+    - title: "Head Project's Manager"
+      company: "IEEE Computer Society"
+      duration: "July 2019 - Current"
 
-    - title: "Sr. Front-End Developer"
-      company: "Textic"
-      duration: "Apr 2010 - Jan 2011"
+    - title: "Technical Head - Mar's Rover Division"
+      company: "Technocrat's Robotics"
+      duration: "Apr 2019 - Mar 2020"
 
-    - title: "Jr. Front-End Developer"
-      company: "Cyberse"
-      duration: "Jun 2009 - Mar 2010"
+    - title: "Project Lead - Website Development"
+      company: "Renaissance 2k19"
+      duration: "sept 2018 - Feb 2019"
+
+    - title: "Robotics Engineer"
+      company: "Technocrats Robotics"
+      duration: "Octr 2018 - Feb 2019"
 
 # Client & Work
 client_and_work:
   title: "Clients & Works"
-  enable: true
+  enable: false
 
   clients:
     - logo:
@@ -180,7 +184,7 @@ client_and_work:
 
 # testimonial
 testimonial:
-  enable: true
+  enable: false
   title: "Testimonials"
   items:
     - name: "Daniel Jordan"
@@ -215,20 +219,20 @@ contact:
     message: "Type Your Message Here"
   phone:
     title: "Phone Number"
-    number: "+41 (44) 505 10 99"
+    number: "+91 75502 26879"
   email:
     title: "Email"
-    email: '<a href="mailto:team@radity.com">team@radity.com</a>'
+    email: '<a href="mailto:yanshrey@gmail.com">yanshrey@gmail.com</a>'
   address:
     title: "Address"
-    address: "Radity GmbH<br />Max-Bill-Platz 5, 8050 Zürich"
+    address: "A Block, Vellore Institute of Technology, Chennai, Tamil Nadu, India"
   button:
     icon: "icon-mail-fill"
     btnText: "Send Message"
 
 # newsletter
 newsletter:
-  enable: true
+  enable: false
   title: "Newsletter subscription"
   success_message: "Successfully subscribed"
   error_message: "Error while subscribing."
