--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ languageCode = "en-us"
     text2 = "Saha"
 
   [params.footer]
-      copyright = "© Raditian. All rights reserved."
+      copyright = "© All rights reserved."
       [params.footer.radity_logo]
         x = "img/general/design-and-code-radity.png"
         _2x = "img/general/design-and-code-radity@2x.png"
