Updated Google Tag

--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ languageCode = "en-us"
 
 [params]
 
-  googleTagManagerID = "UA-163523113-2" # Google Analytics works with Google Tag Manager
+  googleTagManagerID = "G-0JW5NGVN1H" # Google Analytics works with Google Tag Manager
 
   [params.logo]
     text1 = "Shreyansh"
